--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: tiktok_tutorial
+name: square_up_fresh
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,11 +28,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.2.0
-  cloud_firestore: ^3.1.6
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.3.5
-  firebase_core: ^1.11.0
-  firebase_storage: ^10.2.5
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.18.2
+  cloud_firestore: ^4.16.2
+  firebase_storage: ^11.6.2
+  firebase_app_check: ^0.2.2+4
+  supabase_flutter: ^2.8.4
+
+
   flutter:
     sdk: flutter
   get: ^4.6.1
